--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,17 +1,19 @@
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("fonts-backend/inter-regular.woff") format("woff");
+  src: url("fonts/inter-400-regular.woff") format("woff"),
+  url("fonts/inter-400-regular.woff2") format("woff2");
 }
 
 @font-face {
-  font-family: 'Roboto Slab';
+  font-family: "Inter";
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-display: swap;
-  src: url("fonts-backend/robotoslab-regular.woff") format("woff");
+  src: url("fonts/inter-500.woff") format("woff"),
+  url("fonts/inter-500.woff2") format("woff2");
 }
 
 @font-face {
@@ -19,7 +21,8 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("fonts-backend/roboto-regular.woff") format("woff");
+  src: url("fonts/roboto-400-regular.woff") format("woff"),
+  url("fonts/roboto-400-regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -27,7 +30,17 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("fonts-backend/roboto-medium.woff") format("woff");
+  src: url("fonts/roboto-500.woff") format("woff"),
+  url("fonts/roboto-500.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("fonts/roboto-700.woff") format("woff"),
+  url("fonts/roboto-700.woff2") format("woff2");
 }
 
 @font-face {
@@ -35,13 +48,24 @@
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: url("fonts-backend/roboto-black.woff") format("woff");
+  src: url("fonts/roboto-900.woff") format("woff"),
+  url("fonts/roboto-900.woff2") format("woff2");
 }
 
 @font-face {
-  font-family: 'Source Sans Pro';
+  font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("fonts-backend/sourcesanspro-regular.woff") format("woff");
+  src: url("fonts/roboto-slab-400-regular.woff") format("woff"),
+  url("fonts/roboto-slab-400-regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: 'Roboto Slab';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("fonts/roboto-slab-700.woff") format("woff"),
+  url("fonts/roboto-slab-700.woff2") format("woff2");
 }
