--- a/styles/media.css
+++ b/styles/media.css
@@ -17,3 +17,51 @@
   }
 
 }
+
+/* gallery */
+
+@media screen and (max-width: 920px) {
+  .gallery {
+    grid-template-columns: repeat(2, 282px);
+    grid-template-rows: repeat(3, 361px);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .gallery {
+    grid-template-columns: repeat(1, 282px);
+    margin-bottom: 48px;
+    justify-content: center;
+  }
+}
+
+/* popup */
+
+@media screen and (max-width: 1279px) {
+  .popup__container {
+    left: calc(50% - 33.6% / 2);
+  }
+}
+
+@media screen and (max-width: 1042px) {
+  .popup__container {
+    left: calc(50% - 320px / 2);
+  }
+}
+
+/* container popup */
+@media screen and (max-width: 920px) {
+  .main {
+    width: calc(100% - 2 * 40px);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main {
+    width: calc(100% - 2 * 19px);
+    padding-top: 42px;
+  }
+}
