--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,10 @@
   background-image: url('../images/compressed/georgia-de-lotz--bg.jpg');
 }
 
+.link:hover {
+  cursor: pointer;
+}
+
 .header {
   height: 80px;
   display: flex;
@@ -15,6 +19,29 @@
   border-bottom: 1px solid rgba(196, 196, 196, 0.1);
 }
 
+/* theme white */
+.logo.logo_theme_light {
+  color: #1A1B22;
+  ;
+}
+
+.main-menu__link.main-menu__link_theme_light {
+  color: #1A1B22;
+  ;
+}
+
+.main-menu__link.main-menu__link_theme_light.main-menu__link_active {
+  color: #1A1B22;
+  border-bottom: 3px solid #1A1B22;
+}
+
+.btn.btn_theme_light {
+  border: 1px solid #D1D2D6;
+  color: #1A1B22;
+  background-image: url(../images/compressed/arrow.png);
+}
+
+/*** theme white */
 .header__wrapper {
   width: calc(100% - 2 * 104px);
   margin: auto;
@@ -46,10 +73,13 @@
   text-decoration: none;
 }
 
-.main-menu {
+.menu {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.main-menu {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -60,8 +90,11 @@
   margin-right: 42px;
 }
 
-.main-menu__link {
+.menu__link {
   text-decoration: none;
+}
+
+.main-menu__link {
   text-align: center;
   color: rgba(182, 188, 191, 1);
   padding: 0 5px;
@@ -76,15 +109,6 @@
 
 .main-menu__link.main-menu__link_active:hover {
   cursor: default;
-}
-
-.main-menu__link:hover {
-  /* color: #fff; */
-  cursor: pointer;
-}
-
-.btn {
-  border-radius: 100px;
 }
 
 .btn:hover {
@@ -108,15 +132,648 @@
 }
 
 .search {
-  padding-top: 80px;
-  text-align: center;
+  width: calc(100% - 2 * 416px);
+  margin: auto;
+  padding: 80px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #ffffff;
 }
 
 .search__heading {
-  color: #fff;
+  /* color: #fff; */
   font-family: Roboto Slab;
   font-size: 60px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
   line-height: 64px;
+  margin: 0 0 32px;
+}
+
+.search__subheading {
+  /* color: #fff; */
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin: 0 0 80px;
+}
+
+.form {
+  display: flex;
+  width: 100%;
+  /* padding-bottom: 80px; */
+}
+
+.btn {
+  outline: none;
+  border-radius: 100px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: center;
+}
+
+.form__btn-submit {
+  height: 64px;
+  border: none;
+  background-color: #2F71E5;;
+  color: rgba(255, 255, 255, 1);
+  box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
+}
+
+.form__btn-submit:hover {
+  background: #347EFF;
+}
+
+.form__btn-submit_disabled {
+  background-color: #E6E8EB;
+  color: #B6BCBF;
+}
+
+.form__btn-submit_disabled {
+  background-color: rgba(230, 232, 235, 1);
+  color: rgba(182, 188, 191, 1);
+}
+
+.search-form {
+  flex-direction: row;
+  align-items: center;
+  overflow: hidden;
+}
+
+.form__input {
+  background-color: #fff;
+  color: rgba(26, 27, 34, 1);
+  outline: none;
+  border: none;
+  border: 1px solid #D1D2D6;
+  box-sizing: border-box;
+}
+
+.form__input::placeholder {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+  color: #B6BCBF;
+}
+
+.search-form__input {
+  height: 64px;
+  border-radius: 100px;
+  padding: 0 208px 0 24px;
+  flex-basis: 100%;
+}
+
+.search-form__btn-submit {
+  padding: 0 56px;
+  margin-left: -168px;
+}
+
+.searching-for {
+  background-color: #F5F6F7;
+  display: flex;
+  flex-direction: column;
+}
+
+.searching-for__text {
+  margin: 0;
+  color: #B6BCBF;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+}
+
+.searching-for__results {
+  /* ??? */
+  height: 282px;
+}
+
+.searching-for__results_no {
+  /* ??? */
+  height: 374px;
+  background-size: 96px 96px;
+  background-image: url('../images/no-comp/not-found.png');
+  background-repeat: no-repeat;
+  background-position: 50% 20%;
+}
+
+.searching-for__heading {
+  margin: 0;
+  padding-top: 200px;
+  text-align: center;
+  font-family: Roboto Slab;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 16px;
+}
+
+.search-results {
+  width: calc(100% - 2 * 104px);
+  margin: auto;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  text-align: center;
+}
+
+.heading {
+  font-family: Roboto Slab;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 46px;
+  /* or 115% */
+  color: #1A1B22;
+}
+
+.search-results__heading {
+  margin-bottom: 64px;
+  text-align: left;
+}
+
+/* gallery */
+.news {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(3, 400px);
+  /* grid-template-rows: repeat(2, 576px); */
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  margin-bottom: 64px;
+}
+
+/* card */
+.news__item {
+  text-align: left;
+  background-color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  background-image: url(../images/temp/image_08.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 47%;
+  background-origin: border-box;
+  max-height: 576px;
+  height: 576px;
+}
+
+.news__item:hover {
+  cursor: pointer;
+}
+
+/* show just 6 first items */
+.news__item:nth-child(n + 7) {
+  display: none;
+}
+
+.news__tools {
+  display: flex;
+  justify-content: flex-end;
+  /* media */
+  height: 272px;
+  min-height: 272px;
+  min-width: 400px;
+  box-sizing: border-box;
+  padding: 24px;
+  margin-bottom: 20px;
+}
+
+.btn-news {
+  background-color: #FFFFFF;
+  border-radius: 8px;
+  width: 40px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+  margin-left: 5px;
+}
+
+.news__icon-trash {
+  background-size: 24px 24px;
+  background-image: url(../images/compressed/trash.png);
+}
+
+.news__icon-trash:hover {
+  background-image: url(../images/compressed/trash-hover.png);
+}
+
+.news__icon-save {
+  background-size: 14px 19px;
+  background-image: url(../images/compressed/save-normal.png);
+}
+
+.news__icon-save:hover {
+  background-image: url(../images/compressed/save-hover.png);
+}
+
+.news__icon-save_marked {
+  background-image: url(../images/compressed/save-marked.png);
+}
+
+.news__tooltip {
+  padding: 11px 20px;
+  background: #FFFFFF;
+  box-shadow: 0px 10px 22px rgba(59, 74, 116, 0.1);
+  border-radius: 10px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  text-align: center;
+  height: 40px;
+  /* overflow: hidden; */
+  box-sizing: border-box;
+  white-space: nowrap;
+}
+
+.news__post {
+  padding: 0 24px 24px;
+}
+
+.news__date {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  /* identical to box height, or 133% */
+  align-items: center;
+  color: #B6BCBF;
+  margin-bottom: 12px;
+}
+
+.news__title {
+  margin: 0 0 16px 0;
+  padding: 0;
+  font-family: Roboto Slab;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 30px;
+  /* or 115% */
+  color: #1A1B22;
+}
+
+.news__text {
+  margin: 0 0 18px 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+  /* or 137% */
+  color: #1A1B22;
+  text-overflow: ellipsis;
+}
+
+.news__source {
+  font-family: Roboto Slab;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height, or 125% */
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+  color: #B6BCBF;
+}
+
+.search-result__btn {
+  display: inline-block;
+  background-color: #fff;
+  padding: 20px 98px;
+  border: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  /* identical to box height, or 133% */
+  text-align: center;
+  color: #1A1B22;
+}
+
+.search-result__btn:hover {
+  opacity: 0.9;
+}
+
+.about {
+  display: flex;
+  margin: 80px 0 0;
+  background-color: #fff;
+  padding-bottom: 80px;
+}
+
+.about__avatar {
+  max-width: 464px;
+  max-height: 464px;
+  padding-left: 104px;
+  padding-top: 80px;
+}
+
+.about__info {
+  padding: 131px 216px 0 56px;
+}
+
+.about__text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  /* or 133% */
+  color: #1A1B22;
+  padding-bottom: 10px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 104px;
+}
+
+.footer__links {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__copyright {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+  /* identical to box height, or 137% */
+  color: #B6BCBF;
+  padding-top: 32px;
+}
+
+.foo-menu {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  padding-top: 30px;
+}
+
+.foo-menu__item {
+  text-align: center;
+  color: rgba(182, 188, 191, 1);
+  padding: 0 5px;
+  padding-bottom: 23px;
+  white-space: nowrap;
+  margin-right: 30px;
+}
+
+.foo-menu__item:last-child {
+  margin-right: 0;
+}
+
+.foo-menu__link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  /* or 133% */
+  text-align: center;
+  color: #1A1B22;
+}
+
+.foo-social {
+  padding-top: 29px;
+  padding-left: 42px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.foo-social__link {
+  width: 20px;
+  height: 20px;
+  display: block;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.foo-social__item {
+  margin-right: 28px;
+}
+
+.foo-social__item:last-child {
+  margin-right: 0;
+}
+
+.foo-social__link_fb {
+  background-image: url('../images/compressed/fb-icon.png');
+}
+
+.foo-social__link_gh {
+  background-image: url('../images/compressed/gh-icon.png');
+}
+
+/* popup */
+.popup {
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  overflow: auto;
+  background: rgba(0, 0, 0, .5);
+  display: flex;
+  justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility .5s, opacity .8s ease;
+}
+
+.popup__container {
+  min-width: 320px;
+  max-width: 430px;
+  width: 33.6%;
+  background: #fff;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  position: absolute;
+  border-radius: 10px;
+  top: 195px;
+  left: calc(50% - 430px / 2);
+  padding: 34px 36px 36px 36px;
+  box-sizing: border-box;
+}
+
+.popup.popup_opened {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup__close {
+  position: absolute;
+  top: -40px;
+  right: -40px;
+  font-size: 67px;
+  transform: rotate(45deg);
+  font-weight: 200;
+  padding: 0;
+  line-height: 43px;
+  color: #fff;
+  background: none;
+  border: none;
+}
+
+.popup__close:hover {
+  color: rgba(255, 255, 255, 0.6);
+  cursor: pointer;
+}
+
+.popup__close:focus {
+  outline: none;
+}
+
+.main {
+  margin: 0 auto;
+}
+
+.main__container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 358px;
+  margin: auto;
+}
+
+/* .form__label, */
+.popup-form__label {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #2F71E5;
+}
+
+.login__label {
+  margin-bottom: 9px;
+}
+
+/* .login, */
+.popup-form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+/* .login__heading, */
+.popup-form__heading {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 28px;
+  margin-bottom: 22px;
+}
+
+/* .login__email, */
+/* .signup__email, */
+.popup-form__input {
+  font-size: 14px;
+  line-height: 30px;
+  margin-bottom: 5px;
+  border: 0;
+  border-bottom: 1px solid #B6BCBF;
+}
+
+.popup-form__input:focus {
+  border-bottom: 1px solid #000000;
+}
+
+
+/* .login__label[for="password-input"], */
+/* .signup__label[for="password-input"], */
+.popup-form__label:not(:first-child) {
+  margin-top: 31px;
+}
+
+/* .login__email::placeholder, */
+/* .signup__email::placeholder, */
+.popup-form__input::placeholder {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #B6BCBF;
+}
+
+/* .login__password,
+.signup__password {
+  font-size: 14px;
+  line-height: 30px;
+  border: 0;
+  border-bottom: 1px solid #B6BCBF;
+} */
+
+/* .login__password::placeholder,
+.signup__password::placeholder {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #B6BCBF;
+} */
+
+
+/* .login__btn-submit, */
+/* .signup__btn-submit, */
+.popup-form__btn-submit {
+  margin-top: 39px;
+}
+
+/* .login__link, */
+/* .signup__link, */
+.popup-form__link {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #2F71E5;
+  text-decoration: none;
+}
+
+/* .login__link:hover, */
+/* .signup__link:hover, */
+.popup-form__link:hover {
+  opacity: 0.6;
+}
+
+
+/* .login__signup, */
+/* .signup__signin, */
+.popup-form__bottom {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  margin-top: 16px;
+  align-self: center;
 }
