--- a/news-explorer-frontend/src/styles/media.css
+++ b/news-explorer-frontend/src/styles/media.css
@@ -1,3 +1,19 @@
+@media screen and (min-width: 660px) {
+
+  /* to hide active mobile menu while stretching the page */
+  /* .header__menu-mobile_active {
+    display: none !important;
+  } */
+
+  .header {
+    background-color: transparent !important;
+  }
+
+  .header__burger-menu_active {
+    display: none !important;
+  }
+}
+
 @media screen and (max-width: 768px) and (min-width: 320px) {
   .main {
     padding-top: 32px;
@@ -29,9 +45,7 @@
   .footer {
     /* padding: 0 40px; */
     width: calc(100% - 2 * 40px);
-
-}
-
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -156,15 +170,13 @@
     line-height: 40px;
   }
 
+  .footer__copyright {
+    padding-top: 24px;
+  }
 
-.footer__copyright {
-  padding-top:24px;
-}
-
-.footer__links {
-  padding-top:21px;
-}
-
+  .footer__links {
+    padding-top: 21px;
+  }
 
   /* .gallery {
     grid-template-columns: repeat(1, 282px);
@@ -181,12 +193,13 @@
     width: calc(100% - 2 * 16px);
     /* width: auto; */
     /* padding: 0 16px; */
-}
-.footer__copyright {
+  }
+
+  .footer__copyright {
     padding-top: 38px;
     padding-bottom: 20px;
     text-align: center;
-}
+  }
 }
 
 @media screen and (max-width: 719px) {
@@ -201,38 +214,97 @@
   }
 }
 
-
 @media screen and (max-width: 660px) {
   .header__menu {
+    position: absolute;
+    left: 0;
+    top: 56px;
+    width: 100%;
+    background-color: #000;
+    border-radius: 0 0 16px 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: self-start;
     display: none;
   }
 
-  .header__burger-menu {
+  .header__menu.header__menu_active {
+    display: flex;
+  }
+
+  .burger-menu {
     display: block;
+    position: absolute;
+    right: 16px;
+    top: 28px;
+    /* display: none; */
+  }
+
+  /* .burger-menu_active {
+    border-top: none;
+    border-bottom: none;
+    height: 24px;
+    width: 24px;
+    background-image: url('../images/no-comp/close.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    top: 16px;
+    right: 11px;
+  } */
+
+  .burger-menu_active {
+    /* border-top: none;
+    border-bottom: none; */
+    /* height: 12px;
+    width: 12px; */
+    /* background-image: url('../images/no-comp/close.png');
+    background-repeat: no-repeat;
+    background-size: contain; */
+    /* top: 16px;
+    right: 11px; */
+    /* display: block; */
+  }
+
+  .burger-menu.burger-menu_active:before {
+    transform: rotate(45deg);
+    margin-bottom: -2px;
+  }
+
+  .burger-menu.burger-menu_active:after {
+    transform: rotate(-45deg);
   }
 
 
-  .header__menu.header__menu_mobile {
-    /* display: flex; */
-    background-color: #000;
-    z-index: 9999;
-    border-radius: 0 0 16px 16px;
+
+  .main-menu {
+    flex-direction: column;
+    align-items: start;
+    padding: 1em;
+  }
+
+  .btn__header {
+    align-self: center;
+    max-width: 288px;
+    width: 100%;
+    margin-bottom: 24px;
+  }
+
+  .main-menu__link {
+    display: inline-block;
+    padding: 0;
+    line-height: 56px;
   }
 
   .header {
     height: 56px;
     width: 100%;
-    /* background-color: #000; */
+    background-color: #000;
     /* position: fixed; */
   }
 
-  .header__burger {
-    display: block;
-  }
-
-
   .header__wrapper {
-    width: calc(100% - 2 * 16px);
+    /* width: calc(100% - 2 * 16px); */
+    padding: 0 1em;
   }
 
   .page__top::before {
@@ -308,13 +380,13 @@
 
   .about__info {
     padding: 24px 16px;
-}
+  }
 
-.foo-menu {
+  .foo-menu {
     flex-direction: column;
     align-items: flex-start;
     /* padding-top: 30px; */
-}
+  }
 }
 
 @media screen and (max-width: 480px) {
