--- a/news-explorer-frontend/src/styles/media.css
+++ b/news-explorer-frontend/src/styles/media.css
@@ -1,22 +1,6 @@
-@media screen and (min-width: 660px) {
-
-  /* to hide active mobile menu while stretching the page */
-  /* .header__menu-mobile_active {
-    display: none !important;
-  } */
-
-  .header {
-    background-color: transparent !important;
-  }
-
-  .header__burger-menu_active {
-    display: none !important;
-  }
-}
-
 @media screen and (max-width: 768px) and (min-width: 320px) {
   .main {
-    padding-top: 32px;
+    /* padding-top: 32px; */
   }
 
   .search-results__heading {
@@ -98,8 +82,6 @@
   }
 
   .news__tools {
-    /* display: flex; */
-    /* justify-content: flex-end; */
     height: 150px;
     min-height: 150px;
     max-width: 224px;
@@ -215,6 +197,7 @@
 }
 
 @media screen and (max-width: 660px) {
+
   .header__menu {
     position: absolute;
     left: 0;
@@ -228,6 +211,20 @@
     display: none;
   }
 
+  .articles-page__header {
+    background-color: #000;
+}
+
+
+.articles-page__header .logo.logo_theme_light {
+  color:#000 ;
+}
+
+.articles-page__header_active .logo.logo_theme_light {
+  color:#fff ;
+}
+
+
   .header__menu.header__menu_active {
     display: flex;
   }
@@ -240,31 +237,6 @@
     /* display: none; */
   }
 
-  /* .burger-menu_active {
-    border-top: none;
-    border-bottom: none;
-    height: 24px;
-    width: 24px;
-    background-image: url('../images/no-comp/close.png');
-    background-repeat: no-repeat;
-    background-size: contain;
-    top: 16px;
-    right: 11px;
-  } */
-
-  .burger-menu_active {
-    /* border-top: none;
-    border-bottom: none; */
-    /* height: 12px;
-    width: 12px; */
-    /* background-image: url('../images/no-comp/close.png');
-    background-repeat: no-repeat;
-    background-size: contain; */
-    /* top: 16px;
-    right: 11px; */
-    /* display: block; */
-  }
-
   .burger-menu.burger-menu_active:before {
     transform: rotate(45deg);
     margin-bottom: -2px;
@@ -274,7 +246,25 @@
     transform: rotate(-45deg);
   }
 
+  .main-menu__link.main-menu__link_theme_light {
+    color: #fff;
+    ;
+  }
 
+  .main-menu__link.main-menu__link_theme_light.main-menu__link_active {
+    color: #fff;
+    border-bottom: 3px solid #fff;
+  }
+
+  .btn-header.btn-header_theme_light {
+    border: 1px solid #D1D2D6;
+    color: #fff;
+    background-image: url(../images/compressed/arrow-white.png);
+  }
+
+  .burger-menu_theme_light.burger-menu_active::before, .burger-menu_theme_light.burger-menu_active::after {
+    border-top: 2px solid #fff;
+}
 
   .main-menu {
     flex-direction: column;
@@ -298,12 +288,9 @@
   .header {
     height: 56px;
     width: 100%;
-    background-color: #000;
-    /* position: fixed; */
   }
 
   .header__wrapper {
-    /* width: calc(100% - 2 * 16px); */
     padding: 0 1em;
   }
 
@@ -417,5 +404,26 @@
 
   .search__subheading {
     margin: 0 0 122px;
+  }
+
+  /* popup */
+  .popup {
+    background: none;
+  }
+  
+  .popup__container {
+    top: 56px;
+    left: 0;
+    min-width: 320px;
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+  }
+
+  .popup__close {
+    top: -29px;
+    right: 12px;
+    line-height: 0px;
+    font-size: 35px;
   }
 }
