--- a/news-explorer-frontend/src/styles/style.css
+++ b/news-explorer-frontend/src/styles/style.css
@@ -446,6 +446,10 @@
 
 .news__post {
   padding: 0 24px 24px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .news__date {
@@ -473,6 +477,7 @@
   overflow-y: hidden;
   text-overflow: ellipsis;
   max-height: 60px;
+  height: 60px;
 }
 
 .news__text {
@@ -485,6 +490,8 @@
   /* or 137% */
   color: #1A1B22;
   height: 110px;
+  max-height: 110px;
+  min-height: 110px;
   overflow-y: hidden;
   text-overflow: ellipsis;
   box-sizing: border-box;
@@ -503,6 +510,7 @@
   height: 20px;
   max-height: 20px;
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
 }
 
