--- a/news-explorer-frontend/src/styles/media.css
+++ b/news-explorer-frontend/src/styles/media.css
@@ -124,6 +124,7 @@
 
   .search-results {
     padding-bottom: 40px;
+    padding-top: 40px;
   }
 
   .search-result__btn {
@@ -345,11 +346,9 @@
   }
 
   .search-results {
+    width: calc(100% - 2 * 16px);
     padding-bottom: 32px;
-  }
-
-  .search-results {
-      width: calc(100% - 2 * 16px);
+    padding-top: 32px;
   }
 
   .footer {
