--- a/news-explorer-frontend/src/styles/style.css
+++ b/news-explorer-frontend/src/styles/style.css
@@ -278,22 +278,29 @@
 }
 
 .searching-for__results {
-  /* ??? */
   height: 282px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.searching-for__spinner {
+  margin-bottom: 16px;
 }
 
 .searching-for__results_no {
-  /* ??? */
-  height: 374px;
+  height: auto;
   background-size: 96px 96px;
   background-image: url('../images/no-comp/not-found.png');
   background-repeat: no-repeat;
-  background-position: 50% 20%;
+  background-position: 50% 86px;
+  padding: 200px 0 80px;
+  max-width: 220px;
+  margin: auto;
 }
 
 .searching-for__heading {
   margin: 0;
-  padding-top: 200px;
   text-align: center;
   font-family: Roboto Slab;
   font-size: 26px;
@@ -308,6 +315,7 @@
   margin: auto;
   text-align: center;
   padding-bottom: 80px;
+  padding-top: 80px;
 }
 
 .heading {
@@ -360,7 +368,6 @@
 }
 
 .news__tools {
-  /* position: relative; */
   display: flex;
   justify-content: space-between;
   background-image: url(../images/temp/image_08.jpg);
@@ -714,7 +721,7 @@
 
 .main {
   margin: 0 auto;
-  padding-top: 80px;
+  /* padding-top: 80px; */
   background: #F5F6F7;
 }
 
@@ -912,7 +919,7 @@
 }
 
 .popup-info__bottom {
-  align-self:flex-start;
+  align-self: flex-start;
   margin-top: 0;
 }
 
@@ -929,4 +936,22 @@
 .form__submit_disabled:hover {
   cursor: auto;
   background: #E6E8EB;
+}
+
+/* preloader */
+.circle-preloader {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border: 4px solid #444;
+  border-bottom-color: #888;
+  border-radius: 50%;
+  margin: auto;
+  animation: spin .75s infinite linear;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
 }
