--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,7 +34,7 @@
 .foo-menu__item {
   text-align: center;
   color: rgba(182, 188, 191, 1);
-  padding-right: 25px;
+  padding-right: 44px;
   padding-bottom: 23px;
   white-space: nowrap;
 }
@@ -57,7 +57,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  padding-left: 42px;
+  padding-left: 55px;
   display: flex;
   justify-content: space-between;
 }
@@ -94,11 +94,17 @@
 
 @media screen and (max-width: 768px) {
   .footer__copyright {
-    padding-top: 24px;
+    padding-top: 15px;
   }
 
   .footer__links {
-    padding-top: 21px;
+    padding-top: 12px;
+  }
+  .foo-social {
+    padding-left: 33px;
+  }
+  .foo-menu__item {
+    padding-right: 23px;
   }
 }
 
@@ -108,21 +114,19 @@
   }
 
   .footer__copyright {
-    padding-top: 38px;
+    padding-top: 18px;
     padding-bottom: 20px;
     text-align: center;
   }
+
 }
 
 @media screen and (max-width: 660px) {
   .footer {
     width: calc(100% - 2 * 16px);
 }
+.foo-menu {
+  flex-direction: column;
+  align-items: flex-start;
 }
-
-@media screen and (max-width: 600px) {
-  .foo-menu {
-    flex-direction: column;
-    align-items: flex-start;
-  }
 }
