--- a/src/components/SavedNewsHeader/SavedNewsHeader.css
+++ b/src/components/SavedNewsHeader/SavedNewsHeader.css
@@ -10,7 +10,7 @@
 .articles-page__info {
   width: calc(100% - 2 * 104px);
   margin: auto;
-  padding: 40px 0 56px 0;
+  padding: 34px 0 56px 0;
 }
 
 .articles-page__saved {
@@ -21,6 +21,8 @@
   line-height: 24px;
   /* identical to box height, or 133% */
   color: rgba(26, 27, 34, 0.5);
+  margin: 0;
+  margin-bottom: 29px;
 }
 
 .articles-page__heading {
@@ -46,6 +48,11 @@
   font-weight: 700;
 }
 
+.articles-page__keywords-by {
+  font-size: 18px;
+  line-height: 24px;
+}
+
 @media screen and (max-width: 1024px) {
   .articles-page__wrapper {
     padding: 32px 104px 22px 104px;
@@ -57,12 +64,17 @@
     max-width: 336px;
     font-size: 30px;
     line-height: 34px;
+    margin-bottom: 15px;
   }
 
   .articles-page__info {
     width: auto;
-    padding: 24px 0 32px 40px;
-}
+    padding: 24px 0 23px 40px;
+  }
+
+  .articles-page__saved {
+  margin-bottom: 16px;
+  }
 }
 
 @media screen and (max-width: 660px) {
@@ -86,5 +98,18 @@
 @media screen and (max-width: 480px) {
   .articles-page__wrapper {
     padding: 24px 16px;
+  }
+
+  .articles-page__saved {
+    font-size: 12px;
+    line-height: 24px;
+  }
+
+  .articles-page__info {
+      padding: 7px 16px 33px 16px;
+  }
+
+  .articles-page__heading {
+    margin-bottom: 50px;
   }
 }
