--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -14,8 +14,8 @@
   font-size: 60px;
   font-style: normal;
   font-weight: normal;
-  line-height: 64px;
-  margin: 0 0 32px;
+  line-height: 60px;
+  margin: 0 0 34px;
 }
 
 .search__subheading {
@@ -24,26 +24,31 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  margin: 0 0 80px;
+  margin: 0 0 89px;
 }
 
 @media screen and (max-width: 768px) {
   .search {
     width: 448px;
     min-width: 448px;
-    padding: 38px 0;
+    padding: 38px 0 47px 0;
   }
   .search__heading {
     font-size: 36px;
     line-height: 40px;
+    margin: 0 0 15px;
   }
+
+  .search__subheading {
+    margin: 0 0 50px;
+}
 }
 
 @media screen and (max-width: 480px) {
   .search {
     width: 288px;
     min-width: 288px;
-    padding: 30px 0;
+    padding: 31px 0;
   }
   .search__heading {
     margin: 0 0 16px;
