--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
   width: calc(100% - 2 * 104px);
   margin: auto;
 }
-.articles-page__header {
+.articles-©__header {
   background-color: transparent;
 }
 
@@ -164,7 +164,8 @@
     left: 0;
     top: 56px;
     width: 100%;
-    background-color: #000;
+    /* background-color: #000; */
+    background-color: #1A1B22;
     border-radius: 0 0 16px 16px;
     display: flex;
     flex-direction: column;
@@ -173,7 +174,7 @@
   }
 
   .articles-page__header {
-    background-color: #000;
+    background-color: #1A1B22;
   }
 
   .articles-page__header .logo.logo_theme_light {
@@ -188,22 +189,6 @@
     display: flex;
   }
 
-  /* .burger-menu {
-    display: block;
-    position: absolute;
-    right: 16px;
-    top: 28px;
-  }
-
-  .burger-menu.burger-menu_active:before {
-    transform: rotate(45deg);
-    margin-bottom: -2px;
-  }
-
-  .burger-menu.burger-menu_active:after {
-    transform: rotate(-45deg);
-  } */
-
   .main-menu__link.main-menu__link_theme_light {
     color: #fff;
     ;
@@ -211,7 +196,6 @@
 
   .main-menu__link.main-menu__link_theme_light.main-menu__link_active {
     color: #fff;
-    border-bottom: 3px solid #fff;
   }
 
   .btn-header.btn-header_theme_light {
@@ -237,11 +221,14 @@
     max-width: 288px;
     width: 100%;
     margin-bottom: 24px;
+    padding: 16px 0;
   }
 
   .main-menu__link {
     display: inline-block;
     padding: 0;
     line-height: 56px;
+    border-bottom: none;
+    color: #fff;
   }
 }
