--- a/src/components/ArticlePage/ArticlePage.css
+++ b/src/components/ArticlePage/ArticlePage.css
@@ -7,7 +7,7 @@
   background-image: none;
 }
 
-.page__top::before {
+.articles-page__top::before {
   content: '';
   display: block;
   position: absolute;
@@ -15,8 +15,9 @@
   top: 79px;
   width: 100%;
   height: 0;
-  border-bottom: 1px solid rgba(196, 196, 196, 0.1);
-  box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
+  /* border-bottom: 1px solid rgba(196, 196, 196, 0.1); */
+  /* box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2); */
+  border-bottom: 1px solid #D1D2D6;
 }
 
 @media screen and (max-width: 768px) {
