--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -17,6 +17,7 @@
 .popup__container {
   min-width: 320px;
   max-width: 430px;
+  width: 430px;
   background: #fff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   position: absolute;
