--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -2,6 +2,7 @@
   flex-direction: row;
   align-items: center;
   overflow: hidden;
+  position: relative;
 }
 
 .search-form__input {
@@ -18,13 +19,24 @@
   margin-left: -168px;
 }
 
+.search-form__input-error {
+  position: absolute;
+  left: 35px;
+  top: 40%;
+}
+
 @media screen and (max-width: 768px) {
   .search-form__input {
     height: 56px;
   }
+
   .search-form__btn-submit {
     padding: 0 52px;
     margin-left: -158px;
+  }
+
+  .search-form__input-error {
+    top: 36%;
   }
 }
 
@@ -32,14 +44,20 @@
   .search-form {
     flex-direction: column;
   }
+
   .search-form__input {
     height: 56px;
     padding-left: 16px;
     margin-bottom: 16px;
   }
+
   .search-form__btn-submit {
     padding: 0 56px;
     margin-left: 0;
     width: 100%;
+  }
+
+  .search-form__input-error {
+    top: 16%;
   }
 }
