Implement Show card button functionality

--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -30,9 +30,9 @@
 }
 
 /* show just 6 first items */
-.news__item:nth-child(n + 7) {
+/* .news__item:nth-child(n + 7) {
   display: none;
-}
+} */
 
 .news__tools {
   display: flex;
