--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -209,7 +209,7 @@
   .news__tools {
     height: 150px;
     min-height: 150px;
-    max-width: 224px;
+    /* max-width: 224px; */
     width: 100%;
     box-sizing: border-box;
     padding: 8px;
